# cmip6-atlas

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
scripts/: plot_region.py
src/cmip6atlas/: __init__.py  cli.py  create_global_regions.py  download.py  download_gadm.py  ensemble.py  era5_normals.py  gadm_countries.csv  metrics_time_series.py  nex_gddp_cmip6_land_mask.nc  region_mask.py  schema.py  time_utils.py  window.py
src/cmip6atlas/metrics/: config.py  convert.py  definitions.py  example.py  pipeline.py  processes.py  units.py
test/: test_download.py
