[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >= 3.4, < 4"]

[project]
authors = [{ name = "Jacqueline Ryan", email = "jacquiepi@protonmail.com" }]
dependencies = ["boto3 >= 1.30.0", "botocore >= 1.30.0"]
description = "Process CMIP6 data into derived statistics at a local level"
license = { file = "LICENSE" }
name = "cmip6atlas"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.urls]
"Homepage" = "https://github.com/jackiryan/cmip6-atlas"
"Issue Tracker" = "https://github.com/jackiryan/cmip6-atlas/issues"
"Repository" = "https://github.com/jackiryan/cmip6-atlas"

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "mypy",
    "boto3-stubs >= 1.30.0",
    "mypy-boto3-s3 >= 1.30.0",
]

[tool.flit.module]
name = "cmip6atlas"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
disallow_untyped_defs = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
