[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >= 3.4, < 4"]

[project]
authors = [{ name = "Jacqueline Ryan", email = "jacquiepi@protonmail.com" }]
dependencies = [
    "bokeh>=3.1.0",
    "boto3>=1.30.0",
    "botocore>=1.30.0",
    "dask>=2022.2.0",
    "distributed>=2022.2.0",
    "geopandas>=0.12.0",
    "netCDF4>=1.5.8",
    "numpy>=1.20.0",
    "pandas>=1.4.0",
    "rasterio>=1.4.0",
    "xarray>=2022.3.0",
]
description = "Process CMIP6 data into derived statistics at a local level"
license = { file = "LICENSE" }
name = "cmip6atlas"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[project.urls]
"Homepage" = "https://github.com/jackiryan/cmip6-atlas"
"Issue Tracker" = "https://github.com/jackiryan/cmip6-atlas/issues"
"Repository" = "https://github.com/jackiryan/cmip6-atlas"

[project.optional-dependencies]
dev = [
    "black",
    "flit",
    "mypy",
    "boto3-stubs >= 1.30.0",
    "mypy-boto3-s3 >= 1.30.0",
    "pandas-stubs",
    "pytest",
    "pytest-cov",
    "types-requests",
    "types-shapely",
]

[project.scripts]
download_cmip6_granules = "cmip6atlas.download:cli"
create_ensemble_mean = "cmip6atlas.ensemble:cli"
create_windowed_average = "cmip6atlas.window:cli"
calculate_metrics_time_series = "cmip6atlas.metrics_time_series:cli"

[tool.flit.module]
name = "cmip6atlas"

[tool.flit.sdist]
include = ["py.typed", "src/cmip6atlas/gadm_countries.csv"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=xml --cov-report=html --import-mode=importlib"
testpaths = ["test"]

[tool.coverage.run]
branch = true
source = ["cmip6atlas"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
omit = ["test/*", "setup.py"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
disallow_untyped_defs = true
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
